.bacon-locations
error|:|/var/home/nilueps/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/borrow.rs|:|178|:|178|:|8|:|14|:|no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope|:|[0m[1m[38;5;9merror[E0599][0m[0m[1m: no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/json/mod.rs:22:64[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let (formatted, pointer_map) = formatter::format(value.borrow());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[1m[38;5;9m^^^^^^[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m::: [0m[0m/var/home/nilueps/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/borrow.rs:178:8[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m178[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    fn borrow(&self) -> &Borrowed;[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m        [0m[0m[1m[38;5;12m------[0m[0m [0m[0m[1m[38;5;12mthe method is available for `std::rc::Rc<serde_json::Value>` here[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m    [0m[0m[1m[38;5;12m= [0m[0m[1mhelp[0m[0m: items from traits can only be used if the trait is in scope[0m
[0m[1m[38;5;14mhelp[0m[0m: trait `Borrow` which provides `borrow` is implemented but not in scope; perhaps you want to import it[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1[0m[0m   [0m[0m[38;5;10m+ use std::borrow::Borrow;[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: there is a method `borrow_mut` with a similar name[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m        let (formatted, pointer_map) = formatter::format(value.[0m[0m[38;5;10mborrow_mut[0m[0m());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[38;5;10m~~~~~~~~~~[0m

|:|none
error|:|src/json/mod.rs|:|22|:|22|:|64|:|70|:|no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope|:|[0m[1m[38;5;9merror[E0599][0m[0m[1m: no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/json/mod.rs:22:64[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let (formatted, pointer_map) = formatter::format(value.borrow());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[1m[38;5;9m^^^^^^[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m::: [0m[0m/var/home/nilueps/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/borrow.rs:178:8[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m178[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    fn borrow(&self) -> &Borrowed;[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m        [0m[0m[1m[38;5;12m------[0m[0m [0m[0m[1m[38;5;12mthe method is available for `std::rc::Rc<serde_json::Value>` here[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m    [0m[0m[1m[38;5;12m= [0m[0m[1mhelp[0m[0m: items from traits can only be used if the trait is in scope[0m
[0m[1m[38;5;14mhelp[0m[0m: trait `Borrow` which provides `borrow` is implemented but not in scope; perhaps you want to import it[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1[0m[0m   [0m[0m[38;5;10m+ use std::borrow::Borrow;[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: there is a method `borrow_mut` with a similar name[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m        let (formatted, pointer_map) = formatter::format(value.[0m[0m[38;5;10mborrow_mut[0m[0m());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[38;5;10m~~~~~~~~~~[0m

|:|none
help|:|src/json/mod.rs|:|1|:|1|:|1|:|1|:|trait `Borrow` which provides `borrow` is implemented but not in scope; perhaps you want to import it|:|none|:|use std::borrow::Borrow;

help|:|src/json/mod.rs|:|22|:|22|:|64|:|70|:|there is a method `borrow_mut` with a similar name|:|none|:|borrow_mut
error|:|/var/home/nilueps/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/borrow.rs|:|178|:|178|:|8|:|14|:|no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope|:|[0m[1m[38;5;9merror[E0599][0m[0m[1m: no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/json/mod.rs:22:64[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let (formatted, pointer_map) = formatter::format(value.borrow());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[1m[38;5;9m^^^^^^[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m::: [0m[0m/var/home/nilueps/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/borrow.rs:178:8[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m178[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    fn borrow(&self) -> &Borrowed;[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m        [0m[0m[1m[38;5;12m------[0m[0m [0m[0m[1m[38;5;12mthe method is available for `std::rc::Rc<serde_json::Value>` here[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m    [0m[0m[1m[38;5;12m= [0m[0m[1mhelp[0m[0m: items from traits can only be used if the trait is in scope[0m
[0m[1m[38;5;14mhelp[0m[0m: trait `Borrow` which provides `borrow` is implemented but not in scope; perhaps you want to import it[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1[0m[0m   [0m[0m[38;5;10m+ use std::borrow::Borrow;[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: there is a method `borrow_mut` with a similar name[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m        let (formatted, pointer_map) = formatter::format(value.[0m[0m[38;5;10mborrow_mut[0m[0m());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[38;5;10m~~~~~~~~~~[0m

|:|none
error|:|src/json/mod.rs|:|22|:|22|:|64|:|70|:|no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope|:|[0m[1m[38;5;9merror[E0599][0m[0m[1m: no method named `borrow` found for struct `std::rc::Rc<serde_json::Value>` in the current scope[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/json/mod.rs:22:64[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let (formatted, pointer_map) = formatter::format(value.borrow());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[1m[38;5;9m^^^^^^[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m::: [0m[0m/var/home/nilueps/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/borrow.rs:178:8[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m178[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    fn borrow(&self) -> &Borrowed;[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m        [0m[0m[1m[38;5;12m------[0m[0m [0m[0m[1m[38;5;12mthe method is available for `std::rc::Rc<serde_json::Value>` here[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m    [0m[0m[1m[38;5;12m= [0m[0m[1mhelp[0m[0m: items from traits can only be used if the trait is in scope[0m
[0m[1m[38;5;14mhelp[0m[0m: trait `Borrow` which provides `borrow` is implemented but not in scope; perhaps you want to import it[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1[0m[0m   [0m[0m[38;5;10m+ use std::borrow::Borrow;[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: there is a method `borrow_mut` with a similar name[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m22[0m[0m  [0m[0m[1m[38;5;12m| [0m[0m        let (formatted, pointer_map) = formatter::format(value.[0m[0m[38;5;10mborrow_mut[0m[0m());[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                                                                [0m[0m[38;5;10m~~~~~~~~~~[0m

|:|none
help|:|src/json/mod.rs|:|1|:|1|:|1|:|1|:|trait `Borrow` which provides `borrow` is implemented but not in scope; perhaps you want to import it|:|none|:|use std::borrow::Borrow;

help|:|src/json/mod.rs|:|22|:|22|:|64|:|70|:|there is a method `borrow_mut` with a similar name|:|none|:|borrow_mut
